# axolotl-lcars-ui

./: .gitignore  README.md  launch.sh  pyproject.toml  requirements.txt
configs/: lora-starter.yml
docs/wiki/: Axolotl-Guardrails.md  Home.md  Setup.md
src/axolotl_lcars_ui/: __init__.py  config_store.py  hf_manager.py  main.py  ollama.py  resources.py  runner.py  ui_state.py  validator.py
tests/: test_config_store.py  test_hf_manager.py  test_v4_ui.py
