[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axolotl-lcars-ui"
version = "0.1.0"
description = "LCARS frontend and manager for Axolotl training workflows."
requires-python = ">=3.10"
dependencies = [
  "lcars-ui>=3.5.1",
  "huggingface_hub>=1.0",
  "psutil>=5.9",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
